--- a/.github/workflows/bridgecrew.yml
+++ b/.github/workflows/bridgecrew.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
     
     - name: Run Prisma Cloud
-      id: Prisma Cloud
+      id: workshop-codesecurity
       uses: bridgecrewio/bridgecrew-action@master
       env:
         PRISMA_API_URL: https://api2.prismacloud.io
